<resources>
    <string name="app_name">RappiInterview</string>
    <string name="default_error_message">An unexpected error has occurred</string>
    <string name="main_activity_popular_movies_text">Popular movies</string>
    <string name="main_activity_top_rated_movies_text">Top rated movies</string>
    <string name="main_activity_upcoming_movies">Upcoming movies</string>
    <string name="i_love_rappi">I ♥ Rappi</string>
    <string name="popup_movie_title">Movie details</string>

    <string name="popup_movie_details_format">
        Adult: %1$b \n
        GenreIDs: %2$s \n
        ID: %3$s \n
        Media type: %4$s \n
        Original language: %5$s \n
        Original title: %6$s \n
        Overview: %7$s \n
        Popularity: %8$s \n
        Release date: %9$s \n
        Title: %10$s \n
        Video: %11$s \n
        Vote average: %12$s \n
        Vote count: %13$s \n
        Category: %14$s \n
    </string>
    <string name="popup_movie_poster_text">Poster</string>
    <string name="popup_movie_backdrop_text">Backdrop</string>
    <string name="activity_main_nothing_found_text">Nothing found, make a service call?</string>
    <string name="activity_main_search_keyword_hint">Online search keyword...</string>
</resources>
