<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/popup_movie_title_margin_bottom"
        android:text="@string/popup_movie_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/popup_movie_details_margin"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="0dp"
        android:layout_height="@dimen/popup_movie_poster_image_height"
        app:layout_constraintEnd_toStartOf="@id/backdrop"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details" />

    <ImageView
        android:id="@+id/backdrop"
        android:layout_width="0dp"
        android:layout_height="@dimen/popup_movie_backdrop_image_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/poster"
        app:layout_constraintTop_toBottomOf="@id/details" />

    <TextView
        android:id="@+id/posterTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/popup_movie_poster_text"
        app:layout_constraintBottom_toTopOf="@id/poster"
        app:layout_constraintEnd_toEndOf="@id/poster"
        app:layout_constraintStart_toStartOf="@id/poster" />

    <TextView
        android:id="@+id/backdropTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/popup_movie_backdrop_text"
        app:layout_constraintBottom_toTopOf="@id/backdrop"
        app:layout_constraintEnd_toEndOf="@id/backdrop"
        app:layout_constraintStart_toStartOf="@id/backdrop" />

    <TextView
        android:id="@+id/posterPath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/poster"
        app:layout_constraintStart_toStartOf="@id/poster"
        app:layout_constraintTop_toBottomOf="@id/poster" />

    <TextView
        android:id="@+id/backdropPath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/backdrop"
        app:layout_constraintStart_toStartOf="@id/backdrop"
        app:layout_constraintTop_toBottomOf="@id/backdrop" />
</androidx.constraintlayout.widget.ConstraintLayout>